# PorosityFE

./: .gitignore  CHANGELOG.md  CITATION.cff  CLAUDE.md  CONTRIBUTING.md  LICENSE  PorosityFE.spec  README.md  ValidatePorosity.spec  app.py  conftest.py  porosity_fe_analysis.py  porosity_gui.py  pyproject.toml  requirements.txt  validate_porosity_cli.py
.claude/: settings.json
.claude/hooks/: session-start.sh
.github/workflows/: build-executables.yml  tests.yml
docs/: conf.py
examples/: clustered_midplane.py  compute_degraded_clt_moduli.py  discrete_voids.py  distribution_comparison.py  interface_penny.py  uniform_spherical.py
ml_correction/: mt_correction_model.npz  mt_correction_norm.npz  train_mt_correction.py
porosity_fe/: __init__.py  _ply_angles.py  _types.py  cli.py  empirical.py  fatigue.py  gauss.py  homogenization.py  io.py  materials.py  mesh.py  pipeline.py  porosity_field.py  reporting.py  results.py  uq.py  viz.py  void_geometry.py
porosity_fe/fe/: assembler.py  element.py  solver.py
tests/: conftest.py  test_app.py  test_app_streamlit.py  test_cli.py  test_empirical.py  test_fe_solver.py  test_gauss.py  test_homogenization.py  test_integration.py  test_io.py  test_materials.py  test_mesh.py  test_ply_angles.py  test_porosity_fe.py  test_porosity_field.py  test_results_schema_roundtrip.py  test_solver_distribution_contract.py  test_transforms.py  test_uq.py  test_validation_database.py  test_void_geometry.py
validation/: __init__.py  reference_data.json  validate_all.py  validate_clt_stiffness.py  validate_elhajjar2025_porosity.py  validation_detail_report.md
validation/datasets/: almeida_1994.json  bowles_1992.json  elhajjar_2025.json  ghiorse_1993.json  jeong_1997.json  liu_2006.json  liu_2018.json  (+6 more)
(+8 files in other folders)
